fix: Make infowindows not display images on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,7 +56,11 @@ body {
       font-size: 10px;
     }
 
-    #pageTitle{
+    #pic {
+      display: none;
+    }
+
+    #pageTitle {
     position: fixed;
     top: 0px;
     width: 20%;
